# RAOS

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  dep_debian.sh  install.sh  prebuild.sh  setup.sh  uninstall.sh
docs/: README.md  index.html
fgcsgdm/: DroneViewUI.cxx  DroneViewUI.fl
gui/view/: CMakeLists.txt  DroneMain.cxx  DroneView.cxx  DroneView.h  DroneViewUI.h
scripts/: calc_cx_cy.py  disp_wind_est.py  disp_wind_est_dir.py  disp_wind_est_vel.py  f_inc.py
src/: CMakeLists.txt  DroneViewUI.fl  RAOS_config.cxx  RAOS_config.h  SimConfig.cxx  SimConfig.h  SimLoop.cxx  SimLoop.h  SimMain.cxx  SimRecord.cxx  SimRecord.h  SimThread.cxx  SimThread.h  config.h  main.cxx
src/common/: RAOS_serial_protocol.cxx  RAOS_serial_protocol.h  RAOS_types.h  cuda_error.h
src/common/math/: colored_noise.cxx  colored_noise.h  linalg.cxx  linalg.h  rotation.cxx  rotation.h
src/method/: gas_dist_mapping.cxx  gas_dist_mapping.h  hover_measure.cxx  hover_measure.h  method.cxx  method.h
src/model/: RAOS_model.cxx  RAOS_model.h  SimModel.cxx  SimModel.h  environment.cxx  environment.h  helicopter.h  model_plume.cxx  model_plume.h  model_plume_farrell.cu  model_plume_farrell.cxx  model_plume_farrell.h  model_robot.cxx  model_robot_microbee.cxx  model_robot_microbee.h  model_robot_pioneer.cxx  model_robot_pioneer.h  model_wind.cxx  model_wind.h  model_wind_potential.cxx  model_wind_potential.h  model_wind_uniform.cxx  model_wind_uniform.h  plume.cxx  plume.h  qrmod.cxx  qrmod.h  quadrotor.cxx  quadrotor.h  quadrotor_gdm.h5  robot.cxx  robot.h  wake.cu  wake.cxx  wake.h  wake_qr.cxx  wake_qr.h  wake_qr_cpu.cxx  wake_qr_cpu.h  wake_rotor.cxx  (+3 more)
src/strategy/: RAOS_strategy.py
src/ui/: RAOS_UI.cxx  RAOS_UI.h  RAOS_view.cxx  RAOS_view.h  SimUI.cxx  SimUI.h  SimView.cxx  SimView.h  agv.cxx  agv.h
src/ui/draw/: DrawScene.cxx  DrawScene.h  draw_arena.cxx  draw_arena.h  draw_plume.cxx  draw_plume.h  draw_qr.cxx  draw_qr.h  draw_ref_point.cxx  draw_ref_point.h  draw_robots.cxx  draw_robots.h  draw_scene.cxx  draw_scene.h  draw_wake.cxx  draw_wake.h  draw_wave.cxx  draw_wave.h  materials.cxx  materials.h
src/ui/icons/: icons.h
test/: CMakeLists.txt  main.cxx  wake_qr_cpu.cxx  wake_rotor_cpu.cxx
test/model/: wake_qr_cpu.h  wake_rotor_cpu.cxx  wake_rotor_cpu.h
utils/paper/: fvmlib.pyx  gdm.py  gdm_path.mp  gdm_readings.py  gdm_readings_example.py  quadrotor_gdm_18.h5  quadrotor_gdm_18_no_AOE.h5  quadrotor_gdm_20.h5  quadrotor_gdm_20_no_AOE.h5  quadrotor_gdm_22.h5  quadrotor_gdm_22_no_AOE.h5  quadrotor_gdm_24.h5  quadrotor_gdm_24_no_AOE.h5  quadrotor_gdm_26.h5  quadrotor_gdm_26_no_AOE.h5  quadrotor_markers.h5  quadrotor_original_plume.h5  quadrotor_vortices.py  quadrotor_vortices_plume.h5  quadrotor_vortices_plume.py  setup.py  singlerotor_markers.h5  singlerotor_original_plume.h5  singlerotor_original_plume_ige.h5  singlerotor_streamlines.py  singlerotor_vortices.py  singlerotor_vortices_plume.h5  singlerotor_vortices_plume.py  singlerotor_vortices_plume_ige.h5  singlerotor_vortices_plume_ige.py
utils/paper-rev/: Record_2016-07-08_15-24-37.h5  Record_2016-07-08_15-27-30.h5  Record_2016-07-08_15-51-04.h5  Record_2016-07-08_15-54-44.h5  diff.py  original.py  smooth.py  test.py
utils/paper-rev/experiment/: Record_2016-07-08_15-30-28.h5  Record_2016-07-08_15-32-12.h5  Record_2016-07-08_15-38-16.h5  Record_2016-07-08_15-47-10.h5  Record_2016-07-08_16-03-04.h5  Record_2016-07-08_16-10-39.h5  smooth.py  test.py
utils/paper-rev/simulation/vel_0.1/: build_libs.sh  gdm.py  gdm_readings.py  kernel_dm_vw.c  kernel_dm_vw.pyx  quadrotor_gdm_18.h5  quadrotor_gdm_18_no_AOE.h5  quadrotor_gdm_20.h5  quadrotor_gdm_20_no_AOE.h5  quadrotor_gdm_22.h5  quadrotor_gdm_22_no_AOE.h5  quadrotor_gdm_24.h5  quadrotor_gdm_24_no_AOE.h5  quadrotor_gdm_26.h5  quadrotor_gdm_26_no_AOE.h5  setup.py
utils/paper-rev/simulation/vel_0.5/: gdm_readings.py  gdm_readings_example.py  quadrotor_gdm_18.h5  quadrotor_gdm_18_no_AOE.h5  quadrotor_gdm_20.h5  quadrotor_gdm_20_no_AOE.h5  quadrotor_gdm_22.h5  quadrotor_gdm_22_no_AOE.h5  quadrotor_gdm_24.h5  quadrotor_gdm_24_no_AOE.h5  quadrotor_gdm_26.h5  quadrotor_gdm_26_no_AOE.h5
utils/sensor/: sensor.py
utils/solplot/: CMakeLists.txt  Readme.md  SolPlotMain.cxx  SolPlotPanel.cxx  SolPlotPanel.h  SolPlotUI.fl  octplotRTKtraj3d.m
utils/solplot/plot/: CMakeLists.txt  octplotRTKtraj3d.m  plot.h  plot_octave.cxx
utils/solplot/sol/: ufrtk.c  ufrtk.h
utils/solplot/ui/: SolPlotUI.fl
utils/solplot/ui/cb/: SolPlotPanel.cxx  SolPlotPanel.h
